# HighPerformanceComputing

./: CMakeLists.txt  CMakePresets.json
1_introduction/: 1_1_hello-world.c  1_2_hello-world.cu  1_3_add-2-numbers.cu  1_4_get-device.cu  CMakeLists.txt
2_execution-model/: 2_10_profiling.cu  2_11_warp-divergence.cu  2_12_warp-unroll.cu  2_13_matrixmul_naive.cu  2_14_matrixmul_tiled.cu  2_15_sumreduction.cu  2_16_sumreduction-working.cu  2_17_sumreduction-nodivergence.cu  2_18_sumreduction-nobankconflicts.cu  2_19_sumreduction-reducethreads.cu  2_1_blockdim.cu  2_20_sumreduction-unroll.cu  2_2_thread-id.cu  2_3_block-id.cu  2_4_sum_array.cu  2_6_sumArray-cpu-gpu.cu  2_6_warp-id.cu  2_7_uniqueId_1d.cu  2_8_uniqueId_2d.cu  2_9_uniqueId_3d.cu  CMakeLists.txt
3_memory-model/: 3_1_intro-mem-model.cu  3_2_registers.cu  3_3_pinnedmem.cu  3_4_zerocopymem.cu  3_5_sumArray_unifiedmemory.cu  3_6_globalVariable.cu  3_8_simpleMathSoA.cu  3_9_texturememory.cu  CMakeLists.txt
4_events/: 4_1_hello-world_timing.cu  4_3_1_stream_loop.cu  4_3_stream.cu  4_4_simplenullstream.cu  4_5_streams_sumarray.cu  4_6_blocking_nonblocking.cu  4_7_interstreamdependencies.cu  Makefile
5_libraries/: 5_1_cusp.cu  5_1_cusparse.cu  5_2_thrust.cu  5_3_cublasmatrixmul.cu  5_3_cublasvectoradd.cu
6_cfd/: 6_FD_2D_global.cu
7_optimizations/: 7_1_loop_unrolling.cu  Makefile
BU_CUDALabs/codes_lab1/: B.txt  B_18x18.txt  C_18x18.txt
BU_CUDALabs/codes_lab2/: FD_2D_global.cu  FD_2D_texture_pad.cu  lab2_FD_global.cu  temperature_texture.txt
BU_CUDALabs/codes_lab3/: FD_2D_shared.cu
BU_CUDALabs/codes_lab4/: AAt_naive.cu  B.txt  B_18x18.txt
BU_CUDALabs/codes_lab5/: lab5_weld_vertices.cu
BU_CUDALabs/codes_lab6/: lab6_spMV_ell.cu  spMV_csr.cu
BU_CUDALabs/codes_lab7/: lab7_FD_2D_implicit.cu
CUDA/: CMakeLists.txt
CUDA/1_Indexing/: CMakeLists.txt  indexing.cu  main.cpp
CUDA/1_introduction/: 1_2_hello-world.cu  1_3_add-2-numbers.cu  1_4_get-device.cu  CMakeLists.txt  introduction.cu  main.cpp
CUDA/2_Reduction/: 2_10_profiling.cu  2_14_matrixmul_tiled.cu  2_17_sumreduction-nodivergence.cu  2_18_sumreduction-nobankconflicts.cu  2_19_sumreduction-reducethreads.cu  CMakeLists.txt  main.cpp  reduction.cu
CUDA/2_execution-model/: 2_12_warp-unroll.cu  2_16_sumreduction-working.cu  2_1_blockdim.cu  2_2_thread-id.cu  2_3_block-id.cu  2_8_uniqueId_2d.cu  2_9_uniqueId_3d.cu
CUDA/3_Memory/: CMakeLists.txt  main.cpp  memory.cu
CUDA/3_memory-model/: 3_3_pinnedmem.cu  3_6_globalVariable.cu  3_7_simpleMathAoS.cu  CMakeLists.txt  timeOfDay.cpp
CUDA/4_Events/: CMakeLists.txt
CUDA/4_events/: 4_3_stream.cu  4_4_simplenullstream.cu  4_6_blocking_nonblocking.cu  CMakeLists.txt  events.cu  main.cpp
CUDA/5_LinearAlgebra/: CMakeLists.txt  linalg.cu  main.cpp
CUDA/5_libraries/: 5_3_cublasmatrixmul.cu  CMakeLists.txt
CUDA/6_CFD/: BCD.cu  BCD.cuh  BCD.h  CMakeLists.txt  main.cxx  utilityKernels.cu  utilityKernels.cuh  utilityKernels.h
CUDA/6_CFD/Scripts/: plot_temp.py
CUDA/6_cfd/: 6_FD_2D_cpu.cpp  6_FD_2D_global.cu  FD_2D_texture_pad.cu
CUDA/7_optimizations/: 7_1_loop_unrolling.cu
CUDA/BU_CUDALabs/codes_lab1/: C.txt  lab1_matrixMult.cu  matrixMultiplication.cu
CUDA/BU_CUDALabs/codes_lab2/: FD_2D_cpu.cpp  plot.py  plot_temp.py  temperature_global.txt  test_plot.py
CUDA/BU_CUDALabs/codes_lab3/: FD_2D_shared_ghost.cu
CUDA/BU_CUDALabs/codes_lab4/: A.txt  AAt_tiled.cu  A_18x18.txt  lab4_AAt_tiled.cu
CUDA/BU_CUDALabs/codes_lab5/: weld_vertices.cu
CUDA/BU_CUDALabs/codes_lab6/: lab6_poisson.cu  lab6_spMV_csr.cu  poisson.cu  result.txt  spMV_ell.cu
CUDA/BU_CUDALabs/codes_lab7/: FD_2D_cusp.cu  FD_2D_cusp_global.cu
CUDA/pyCUDA/: 1_add.py  2_hello-world.py  pyCUDA.ipynb
DistributedMemory/: CMakeLists.txt  Multiport.cpp  Test.cpp  main.cpp
Hybrid/: CMakeLists.txt  DAGParallel.cpp  DAGParallel.h  KokkosCore.h  kokkos.cpp  kokkos.h  kokkosCore.cpp  main.cpp  sycl.cpp
SharedMemory/: CMakeLists.txt  GraphOptimization.cpp  GraphOptimization.h  PiApproximation.cpp  PiApproximation.h  main.cpp
common/: common.cpp  common.h
x_finite-differences/: finite-differences.cu
